# GalacticConquest

./: Board.spec  Galactic Conquest.pptx  LICENSE.txt  Readme.md  pyproject.toml
GalacticConquest/: AIController.py  Board.py  Board.spec  Button.py  Planet.py  Ship.py
